# dokg-creation-example

./: .gitignore  README.md  desired_packages.txt  main.bash  readme.md  rosdep.yaml
package_a/: package.xml
package_a/debian/: changelog  control  rules
package_b/: CMakeLists.txt
package_b/debian/: changelog  control  rules
src/package_a/: CMakeLists.txt  package.xml
src/package_b/: package.xml
src/stack-of-packages/package_c/: CMakeLists.txt  package.xml
src/stack-of-packages/package_d/: CMakeLists.txt  package.xml
