<?xml version="1.0"?>
<package format="2">
  <name>package_a</name>
  <version>0.0.0</version>
  <description>The package_a package</description>

  <maintainer email="rafael_rojas@todo.todo">rafael_rojas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>package_b</depend>


  <export>
  </export>
</package>
